avoid horizontal scrollbar
git-svn-id: svn://svn.open-ils.org/ILS/trunk@2014 dcc99617-32d9-48b4-a31d-7c20da2025e4

--- a/Open-ILS/web/opac/skin/default/css/layout.css
+++ b/Open-ILS/web/opac/skin/default/css/layout.css
@@ -153,4 +153,4 @@ border-left: 1px solid #E0E0E0; border-top: 1px solid #E0E0E0; border-bottom: 1p
 .myopac_table td { padding: 3px; }
 .myopac_form_pic { width: 20px; height: 20px; }
 
-.tips { padding: 2px; text-align: center; border: solid #E0E0E0 3px; -moz-border-radius: 3px; width: 100%; }
+.tips { padding: 2px; text-align: center; border: solid #E0E0E0 3px; -moz-border-radius: 3px; width: 99%; }
